invisible dragging list fixed

--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@
 
 	--secondary: #4e4e57;
 	--secondary-light: #a5a5b3;
+	--secondary-transparent: #4e4e5755;
 
 	--danger: #be0000;
 	--danger-light: #ff5757;
